src/styles.scss
/* You can add global styles to this file, and also import other style files */
html {
    color: white;
    font-family: Roboto, Arial, Helvetica, sans-serif;
    height: 100%;
    margin: 0;

}

.container {
    display: flex;
    height: 100vh;
}

.team-container {
    flex: 1;
}
.inner-team-container {
    width: 90%;
    height: 90%;
    padding: 5%;
    container-type: inline-size;
}
.left-team-container {
    background-color: rgb(5, 88, 5);
}
.right-team-container {
    background-color: rgb(5, 5, 133);
}
.team-title {
    margin: 0 auto;
    text-align: center;
    font-size: 15cqi;
    width: 90%;
}

.score {
    margin: 5vh auto;
    text-align: center;
    font-size: 15cqi;
    line-height: 1.2;
    width: 90%;
}

.points {
    margin: 5vh auto;
    text-align: center;
    font-size: 7cqi;
    line-height: 1.2;
    width: 90%;
}

.score-animating {
    color: yellow;
}

.bottom-section {
    position: relative;
}

.answers-container {
    width: 100%;
    display: inline-block;
}

.answer-container {
    width: 100%;
    margin: 1vh 0;
}

.answer-score {
    vertical-align: top;
    display: inline-block;
    margin: 0 auto;
    font-size: 6cqi;
    text-align: center;
    width: 25%;
}

.answer-text {
    vertical-align: top;
    display: inline-block;
    font-size: 6cqi;
    text-align: center;
    width: 75%;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}

